tests/api_misuse/register_impl_for_tuple.stderr
error: custom attribute panicked
 --> tests/api_misuse/register_impl_for_tuple.rs:7:1
  |
7 | #[traitreg::register]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Cannot register implementation on a tuple, expected a struct, enum, union or type alias.
