tests/api_misuse/register_impl_for_tuple.rs
fn main() {}



trait MyTrait {}

#[traitreg::register]
impl MyTrait for (u32,) {}
